# aft-mcp

./: .gitignore  .mcp.json  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  STRUCTURE.md  aft.toml  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md
.gsd/milestones/M001/: M001-ROADMAP.md
.gsd/milestones/M001/slices/S02/: S02-ASSESSMENT.md  S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M001/slices/S04/: S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M001/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M002/slices/S01/: S01-ASSESSMENT.md
.gsd/milestones/M003/: M003-RESEARCH.md  M003-ROADMAP.md  M003-SUMMARY.md
.gsd/milestones/M003/slices/S01/: S01-ASSESSMENT.md
.gsd/milestones/M003/slices/S02/: S02-ASSESSMENT.md
.gsd/milestones/M003/slices/S03/: S03-ASSESSMENT.md
.gsd/milestones/M003/slices/S04/: S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M003/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M004/: M004-RESEARCH.md  M004-ROADMAP.md
.gsd/milestones/M004/slices/S02/: S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M004/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md
.opencode/: aft.jsonc
benchmarks/: .gitignore  package.json  swe-bench-django-10.json  swe-bench-multilingual.json
benchmarks/src/: analyze.ts  config.ts  exercise.ts  metrics.ts  reporter.ts  runner.ts  swe-bench-runner.ts
crates/aft/: Cargo.toml
crates/aft/src/: ast_grep_lang.rs  backup.rs  callgraph.rs  calls.rs  checkpoint.rs  config.rs  context.rs  edit.rs  extract.rs  format.rs  fuzzy_match.rs  imports.rs  indent.rs  lib.rs  lsp_hints.rs  main.rs  parser.rs  protocol.rs  symbols.rs  template_bindings.rs
crates/aft/src/commands/: add_decorator.rs  add_derive.rs  add_import.rs  add_member.rs  add_struct_tags.rs  ast_replace.rs  ast_search.rs  batch.rs  call_tree.rs  callers.rs  configure.rs  conflicts.rs  delete_file.rs  edit_history.rs  edit_match.rs  edit_symbol.rs  extract_function.rs  impact.rs  inline_symbol.rs  lsp_diagnostics.rs  lsp_find_references.rs  lsp_goto_definition.rs  lsp_hover.rs  mod.rs  move_file.rs  move_symbol.rs  organize_imports.rs  read.rs  remove_import.rs  snapshot.rs  trace_data.rs  trace_to.rs  transaction.rs  undo.rs  wrap_try_catch.rs  write.rs  zoom.rs
crates/aft/src/lang/: apex.rs  c.rs  cpp.rs  csharp.rs  css.rs  go.rs  html.rs  java.rs  javascript.rs  markdown.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
crates/aft/src/lsp/: client.rs  document.rs  manager.rs
crates/aft/src/queries/: apex.scm  go.scm  html.scm  javascript.scm  python.scm  rust.scm  typescript.scm
crates/aft/tests/fixtures/: ambiguous.ts
crates/aft/tests/helpers/: mod.rs
crates/aft/tests/integration/: callgraph_test.rs  commands_test.rs  dryrun_test.rs  edit_test.rs  error_path_test.rs  extract_function_test.rs  format_test.rs  helpers.rs  import_test.rs  inline_symbol_test.rs  lsp_commands_test.rs  lsp_diagnostics_test.rs  lsp_document_test.rs  lsp_hints_test.rs  lsp_rename_test.rs  main.rs  markdown_test.rs  member_test.rs  move_symbol_test.rs  protocol_test.rs  safety_test.rs  structure_test.rs  transaction_test.rs
docs/: ADDING-LANGUAGE.md
opencode-plugin-aft/src/__tests__/: tools.test.ts
opencode-plugin-aft/src/tools/: navigation.ts  refactoring.ts
scripts/: install.sh  release.sh  validate-packages.mjs  version-sync.mjs
src/: backup.rs  callgraph.rs  checkpoint.rs  context.rs  error.rs  extract.rs  lib.rs  main.rs  parser.rs
src/commands/: extract_function.rs  inline_symbol.rs  mod.rs  outline.rs  zoom.rs
tests/integration/: callgraph_test.rs  commands_test.rs  extract_function_test.rs  helpers.rs  inline_symbol_test.rs  main.rs  protocol_test.rs  safety_test.rs
