[package]
name = "aft-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP code intelligence server — aft engine with MCP JSON-RPC 2.0 wrapper"

[lib]
name = "aft"
path = "src/lib.rs"

[[bin]]
name = "aft-mcp"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
crossbeam-channel = "0.5"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-md = "0.5"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23.2"
tree-sitter-sfapex = "2.4.0"
similar = "2"
ast-grep-core = "0.41"
streaming-iterator = "0.1"
ignore = "0.4"
notify = "8"
glob = "0.3"
which = "7"
url = "2"
content_inspector = "0.2.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
